# ExistOS-Emulator

./: gui.e
configs/devices/arm-softmmu/: default.mak
hw/arm/: existvm.c  meson.build
roms/evm_bootloader/: CMakeLists.txt  OSLoader.elf  ldr_ld.script  llapi_code.h  main.c  main.h  newlib_stub.c  start.c  vector.c
softmmu/: main.c
